[Banner] Fixes unexpected text wrap in Firefox on focus of secondary action button (#5001)
* Fixes unexpected textwrap on Firefox in secondaryAction in Banner

* Updates unreleased.md

* Added clearer unreleased notes

* Update to use line height to satisfy chromatic diff

* Update Unreleased and add clarity

* Fix duplicate in Unreleased

* Fix the underline on chrome without using line height

* Fix unreleased notes

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -260,6 +260,7 @@ $spinner-size: rem(20px);
     @include focus-ring($style: 'focused');
     box-shadow: none;
     background-color: transparent;
+    display: block;
   }
 }
 
